[gd_scene load_steps=6 format=3 uid="uid://dc42ku1ku26i1"]

[ext_resource type="Script" uid="uid://cgtpow0eqa3vx" path="res://scripts/ui.gd" id="1_nt7q6"]
[ext_resource type="AudioStream" uid="uid://duw5ee45lgxnf" path="res://assets/sounds/win.mp3" id="3_gdt2y"]
[ext_resource type="AudioStream" uid="uid://bm67175wosivh" path="res://assets/sounds/lose.mp3" id="4_gdt2y"]
[ext_resource type="Texture2D" uid="uid://bfsfgpsulwlyc" path="res://assets/textures/label_bg.png" id="4_wm3ai"]
[ext_resource type="FontFile" uid="uid://rbvdxa2g3an0" path="res://assets/fonts/kenny1bit.ttf" id="5_wm3ai"]

[node name="UI" type="CanvasLayer" groups=["ui_scene"]]
script = ExtResource("1_nt7q6")

[node name="MatchWinner" type="RichTextLabel" parent="."]
offset_left = 220.0
offset_top = 230.0
offset_right = 611.0
offset_bottom = 383.0
theme_override_colors/default_color = Color(0.569327, 0.109844, 0.170212, 1)
bbcode_enabled = true
text = "[font size=58][wave amp=50.0 freq=5.0 connected=1]The winner[/wave][/font]"

[node name="RestartActionMsg" type="RichTextLabel" parent="."]
offset_left = 230.0
offset_top = 324.0
offset_right = 526.0
offset_bottom = 384.0
theme_override_colors/default_color = Color(0.673932, 0.0617013, 0.0694641, 1)
bbcode_enabled = true

[node name="PlayerWonSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_gdt2y")
volume_db = -6.0

[node name="PlayerLostSnd" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gdt2y")

[node name="PlayersPoints" type="NinePatchRect" parent="."]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -35.0
offset_right = -6.0
offset_bottom = 35.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("4_wm3ai")

[node name="OpponentPointsLbl" type="Label" parent="PlayersPoints"]
layout_mode = 0
offset_left = 9.0
offset_top = 7.0
offset_right = 49.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.201527, 0.201527, 0.201527, 1)
theme_override_fonts/font = ExtResource("5_wm3ai")
theme_override_font_sizes/font_size = 8

[node name="OpponentPointsVal" type="Label" parent="PlayersPoints"]
layout_mode = 0
offset_left = 145.0
offset_top = 7.0
offset_right = 185.0
offset_bottom = 30.0
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_fonts/font = ExtResource("5_wm3ai")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2

[node name="PlayerPointsLbl" type="Label" parent="PlayersPoints"]
layout_mode = 0
offset_left = 9.0
offset_top = 50.0
offset_right = 49.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.139555, 0.0415153, 0.936573, 1)
theme_override_fonts/font = ExtResource("5_wm3ai")
theme_override_font_sizes/font_size = 8

[node name="PlayerPointsVal" type="Label" parent="PlayersPoints"]
layout_mode = 0
offset_left = 145.0
offset_top = 50.0
offset_right = 185.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.141176, 0.0431373, 0.937255, 1)
theme_override_fonts/font = ExtResource("5_wm3ai")
theme_override_font_sizes/font_size = 8
horizontal_alignment = 2
